Fuse GUI cleanup, new tooltip